--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <body>
     <div  class="container">
-    <div class="panel active" style="background-image: url(holiday\ with\ alex.jpg);">
+    <div class="panel active" style="background-image: url(images/holiday\ with\ alex.jpg);">
         <h3>Holiday with Alex</h3>
     </div>
      <div class="panel " style="background-image: url(images/luna\ park.jpg);">
